After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720535 - CUPS backend leaks http connection to CUPS
CUPS backend leaks http connection to CUPS
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Printing
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-12-16 15:52 UTC by Marek Kašík
Modified: 2013-12-19 12:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak http connection to CUPS (2.41 KB, patch)
2013-12-16 15:52 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2013-12-16 15:52:37 UTC
Created attachment 264296 [details] [review]
Don't leak http connection to CUPS

There are 2 leakages of http connection in CUPS print backend.
The first one happens in gtk_print_backend_cups_print_stream() and the second one in cups_request_avahi_printer_info(). The http_t is created there but not closed.

Attached patch schedules those connections for closing after their requests are finished.

Marek
Comment 1 Matthias Clasen 2013-12-19 11:51:27 UTC
Review of attachment 264296 [details] [review]:

ok
Comment 2 Marek Kašík 2013-12-19 12:03:24 UTC
Comment on attachment 264296 [details] [review]
Don't leak http connection to CUPS

Thank you for the review. I've pushed the patch to master.

Marek